--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Welcome!</title>
 </head>
 <body>
-Hello world!
+Hello world! This  is a React JS  demo project !
 <br>
-React JS Demo!
-<div id="logo"></div>
-<script type="text/javascript" charset="utf-8" src="/build/bundle.js"></script>
+<div id="index"></div>
+<script type="text/javascript" charset="utf-8" src="/build/index.js"></script>
+
+
+
 </body>
 </html>
