1、增加material-ui依赖包 2、增加登陆页面

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <title>Welcome!</title>
 </head>
 <body>
 Hello world! This  is a React JS  demo project !
 <br>
-<div id="index"></div>
+<div class="common_div" id="index" ></div>
 <script type="text/javascript" charset="utf-8" src="/build/index.js"></script>
 
 
