增加react-hot-loader、webpack-dev-server依赖

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 Hello world! This  is a React JS  demo project !
 <br>
 <div class="common_div" id="index" ></div>
-<script type="text/javascript" charset="utf-8" src="/build/index.js"></script>
+<script type="text/javascript" charset="utf-8" src="http://localhost:3000/build/index.js"></script>
 
 
 
