规范目录结构

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
     <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
-    <link rel="stylesheet" type="text/css" href="css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="src/css/main.css"/>
     <title>Welcome!</title>
 </head>
 <body>
 Hello world! This  is a React JS  demo project !
 <br>
 <div class="common_div" id="index" ></div>
-<script type="text/javascript" charset="utf-8" src="http://localhost:3000/build/index.js"></script>
+<script type="text/javascript" charset="utf-8" src="http://localhost:3000/build/js/index.js"></script>
 
 
 
